# c-data-structures

./: CMakeLists.txt  README.md  test.c
list/: list.c  list.h
